--- a/pub.html
+++ b/pub.html
@@ -94,22 +94,6 @@ td.papers {
 	</tr>
 
 	<tr>
-		<td class="date"><font color="#083b89">NSDI'25</font></td>
-			<td class="papers">
-				  <div align="justify" class="STYLE4">
-					<p></p>
-						<span style="font-size: 12pt;">
-						  <strong>Dissecting and Streamlining the Interactive Loop of Mobile Cloud Gaming</strong> [<a href="pub/vsync.pdf" target="_blank">pdf</a> | <a href="pub/vsync_bib.txt" target="_blank">bib</a>]
-						  <br>
-						  Yang Li, Jiaxing Qiu, Hongyi Wang, Zhenhua Li, Feng Qian, Jing Yang, Hao Lin, Yunhao Liu, Bo Xiao, Xiaokang Qin, and Tianyin Xu
-						  <br>
-						  In Proceedings of the 22nd USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'25</b></font>), Philadelphia, PA, Apr. 2025.
-					  	</span>
-				  </div>
-		</td>
-	</tr>
-
-	<tr>
 		<td class="date"><font color="#083b89">ICSE'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
@@ -136,6 +120,38 @@ td.papers {
 						  Xinyu Lian, Yinfang Chen, Runxiang Cheng, Jie Huang, Parth Thakkar, Minjia Zhang, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 47th International Conference on Software Engineering (<font color="#083b89"><b>ICSE'25</b></font>), Ottawa, Ontario, Canada, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">NSDI'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Mitigating Scalability Walls of RDMA-based Container Networks</strong> [<a href="pub/scalacn.pdf" target="_blank">pdf</a> | <a href="pub/scalacn_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Wei Liu, Kun Qian, Zhenhua Li, Feng Qian, Tianyin Xu, Yunhao Liu, Yu Guan, Shuhong Zhu, Xiongfei Xu, Lanlan Xi, Chao Qin, and Ennan Zhai
+						  <br>
+						  In Proceedings of the 22nd USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'25</b></font>), Philadelphia, PA, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">NSDI'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Dissecting and Streamlining the Interactive Loop of Mobile Cloud Gaming</strong> [<a href="pub/vsync.pdf" target="_blank">pdf</a> | <a href="pub/vsync_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Yang Li, Jiaxing Qiu, Hongyi Wang, Zhenhua Li, Feng Qian, Jing Yang, Hao Lin, Yunhao Liu, Bo Xiao, Xiaokang Qin, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 22nd USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'25</b></font>), Philadelphia, PA, Apr. 2025.
 					  	</span>
 				  </div>
 		</td>
