--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,25 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a></strong>
+	    <br>
+	    Rethinking Operating System Kernel Extensions: New Use Cases and Programming Framework
+	    <br>
+            Department of Computer Science, University of Illinois Urbana-Champaign
+            <br>
+            Advisors: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://jovans2.github.io" target="_blank">Jovan Stojkovic</a></strong>
 	    <br>
 	    Chasing the Tail at Scale: Towards Cloud-Native Processor Architectures
