--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -90,7 +90,7 @@ td.papers {
 	    <br>
 	    Rethinking Operating System Kernel Extensions: New Use Cases and Programming Framework
 	    <br>
-            Department of Computer Science, University of Illinois Urbana-Champaign
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
             <br>
             Advisors: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
 		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>
@@ -109,7 +109,7 @@ td.papers {
 	    <br>
 	    Chasing the Tail at Scale: Towards Cloud-Native Processor Architectures
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Sep. 13, 2024.
+            Siebel School of Computing and Data Science, University of Illinois at Urbana-Champaign, passed prelim on Sep. 13, 2024.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
           </span>
