--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -93,7 +93,7 @@ td.papers {
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
             <br>
             Advisors: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
-		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>
+		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>, passed prelim on Dec. 18, 2024. 
           </span>
         </div>
       </td>
