--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -90,10 +90,10 @@ td.papers {
 	    <br>
 	    Rethinking Operating System Kernel Extensions: New Use Cases and Programming Framework
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Dec. 18, 2024. 
             <br>
             Advisors: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
-		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>, passed prelim on Dec. 18, 2024. 
+		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>
           </span>
         </div>
       </td>
