--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Alan Andrade</a>, MCS Student (Fall 2023 - now)</p>
+								<p class="STYLE223"><a href="https://alan-s-andrade.github.io" target="_blank">Alan Andrade</a>, MCS Student (Fall 2023 - now)</p>
 								<p class="STYLE223"><a href="https://tz-zzz.github.io" target="_blank">Zhen Tang</a>, MCS Student (Summer 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Manvik Nanda</a>, MCS Student (Fall 2024 - now)</p>
 	<!--
