--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -3,7 +3,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="icon", href="head.jpg">
-<title>publication</title>
+<title>Thesis Committee</title>
 <style type="text/css">
 
 td.date {
