--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE224"># Doctors</p>
-				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber</p>
+				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber &rarr; Meta</p>
 				  <p class="STYLE224"># Maesters</p>
 				  <p class="STYLE223"><a href="https://anna-mazhar.github.io" target="_blank">Anna Mazhar</a>, MS 2024 (<a href="thesis/MAZHAR-THESIS-2024.pdf" target="_blank">thesis</a>) &rarr; Cornell University (PhD)</p> 
 				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, MS 2024 (<a href="thesis/LIAN-THESIS-2024.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; UIUC (PhD)</p>
@@ -634,7 +634,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	              		  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (<a href="thesis/CHEN-THESIS-2021.pdf" target="_blank">thesis</a>) &rarr; Trend Micro</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (<a href="thesis/YOO-THESIS-2021.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, awarded <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
-				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="thesis/CHEN-THESIS-2020.pdf" target="_blank">thesis</a>), awarded <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) &rarr; ByteDance (ML Infra) &rarr; OpenAI </p>
+				  <p class="STYLE223"><a href="https://leochen-ai.github.io" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="thesis/CHEN-THESIS-2020.pdf" target="_blank">thesis</a>), awarded <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) &rarr; ByteDance (ML Infra) &rarr; OpenAI </p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
 				  <p class="STYLE224"># Bachelors</p>
@@ -661,7 +661,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 					  <a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a> and 
 					  <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Google (kernel)</p>
 				  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> &rarr; Purdue University (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS)</p>    
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS) &rarr; TikTok</p>    
 			      	  <p class="STYLE224"># Scholars</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar, 2023--2024 &rarr; University of California Berkeley (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Tsinghua), 2023--2024 &harr; Tsinghua University</p>
