--- a/pub.html
+++ b/pub.html
@@ -149,7 +149,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 						  <strong>Concord: Rethinking Distributed Coherence for Software Caches in Serverless Environments</strong> [<a href="pub/concord.pdf" target="_blank">pdf</a> | <a href="pub/concord_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Jovan Stojkovic, Chloe Alverti, Alan Andrade, Nikoleta Markela Iliakopoulou, Hubertus Franke, Tianyin Xu, and Josep Torrellas
+						  Jovan Stojkovic, Chloe Alverti, Alan Andrade, Nikoleta Iliakopoulou, Hubertus Franke, Tianyin Xu, and Josep Torrellas
 						  <br>
 						  In Proceedings of the 31st IEEE International Symposium on High-Performance Computer Architecture (<font color="#083b89"><b>HPCA'25</b></font>), Las Vegas, NV, Mar. 2025.
 					  	</span>
