--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,24 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong><a href="https://jw-liu.xyz" target="_blank">Jiawei Liu</a></strong>
+	    <br>
+	    Software Quality Assurance for Machine Learning Systems
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Jan 15, 2024. 
+            <br>
+            Advisor: <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a></strong>
 	    <br>
 	    Rethinking Operating System Kernel Extensions: New Use Cases and Programming Framework
