--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+				<p class="STYLE223">Software Reliability in Emerging Cloud Computing Paradigms at 
+					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a> and 
+					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a></p>
 				<p class="STYLE223">Rex and Acto are invited for presentation at IBM Research Day</p>
 				<p class="STYLE223">Three USENIX ;login: magazine articles on
 					<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">Anvil</a>, 
