--- a/defects.html
+++ b/defects.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="icon", href="head.jpg">
-<title>publication</title>
+<title>defects</title>
 <style type="text/css">
 <!--
 .page {
