--- a/index.html
+++ b/index.html
@@ -602,9 +602,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://alan-s-andrade.github.io" target="_blank">Alan Andrade</a>, MCS Student (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://tz-zzz.github.io" target="_blank">Zhen Tang</a>, MCS Student (Summer 2024 - now)</p>
 	<!--
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Manvik Nanda</a>, MCS Student (Fall 2024 - now)</p>
-	-->
-	<!--
 				                                <p class="STYLE223"><a href="https://zzjas.com" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>	
 	-->							<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
 	<!--
@@ -630,6 +627,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE224"># Doctors</p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber &rarr; Meta</p>
 				  <p class="STYLE224"># Maesters</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Manvik Nanda</a>, MCS 2024</p>
 				  <p class="STYLE223"><a href="https://anna-mazhar.github.io" target="_blank">Anna Mazhar</a>, MS 2024 (<a href="thesis/MAZHAR-THESIS-2024.pdf" target="_blank">thesis</a>) &rarr; Cornell University (PhD)</p> 
 				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, MS 2024 (<a href="thesis/LIAN-THESIS-2024.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; UIUC (PhD)</p>
 				  <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu" target="_blank">Pratik Rajesh Sampat</a>, MS 2024 (thesis), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a> &rarr; AMD Research</p>
