--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
 	          <p class="STYLE223">2025
+	            SOSP,
 		    <a href="https://www.usenix.org/conference/osdi25" target="_blank">OSDI</a>,
 		    <a href="https://2025.eurosys.org" target="_blank">EuroSys</a>,
 		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers" target="_blank">ASPLOS</a>,
