--- a/pub.html
+++ b/pub.html
@@ -76,7 +76,7 @@ td.papers {
 				  </div>
 		</td>
 	</tr>
-
+	  
 	<tr>
 		<td class="date"><font color="#083b89">ASPLOS'25</font></td>
 			<td class="papers">
@@ -86,6 +86,22 @@ td.papers {
 						  <strong>M5: Mastering Page Migration and Memory Management for CXL-based Tiered Memory Systems</strong> [<a href="pub/m5.pdf" target="_blank">pdf</a> | <a href="pub/m5_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Yan Sun, Jongyul Kim, Douglas Yu, Jiyuan Zhang, Siyuan Chai, Michael Jaemin Kim, Hwayong Nam, Jaehyun Park, Eojin Na, Yifan Yuan, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
+						  <br>
+						  In Proceedings of the 30th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'25</b></font>), Rotterdam, The Netherlands, Apr. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">ASPLOS'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>CXLfork: Fast Remote Fork over CXL Fabrics</strong> [<a href="pub/cxlfork.pdf" target="_blank">pdf</a> | <a href="pub/cxlfork_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Chloe Alverti, Stratos Psomadakis, Burak Ocalan, Shashwat Jaiswal, Tianyin Xu, and Josep Torrellas
 						  <br>
 						  In Proceedings of the 30th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'25</b></font>), Rotterdam, The Netherlands, Apr. 2025.
 					  	</span>
