--- a/pub.html
+++ b/pub.html
@@ -85,7 +85,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 						  <strong>M5: Mastering Page Migration and Memory Management for CXL-based Tiered Memory Systems</strong> [<a href="pub/m5.pdf" target="_blank">pdf</a> | <a href="pub/m5_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Yan Sun, Jongyul Kim, Douglas Yu, Jiyuan Zhang, Siyuan Chai, Michael Jaemin Kim, Hwayong Nam, Jaehyun Park, Eojin Na, Yifan Yuan, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
+						  Yan Sun, Jongyul Kim, Zeduo Yu, Jiyuan Zhang, Siyuan Chai, Michael Jaemin Kim, Hwayong Nam, Jaehyun Park, Eojin Na, Yifan Yuan, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
 						  <br>
 						  In Proceedings of the 30th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'25</b></font>), Rotterdam, The Netherlands, Apr. 2025.
 					  	</span>
