--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">Illinois CS, <a href="https://undergradresearch.illinois.edu/" target="_blank">OUR</a>, NSF, VMware, Facebook, IBM/C3SR/IIDAI, Intel, Azure, GCP, and GitHub</p>
+				  <p class="STYLE223">Illinois CS, <a href="https://undergradresearch.illinois.edu/" target="_blank">OUR</a>, NSF, VMware, Facebook, IBM/C3SR/IIDAI, Intel, Boeing, Azure, GCP, and GitHub</p>
                              </TD>
                          </TR>
 
