--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,11 +86,43 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong><a href="https://schai.me" target="_blank">Siyuan Chai</a></strong>
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on May 2, 2025. 
+            <br>
+            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+	    <strong><a href="https://tylergu.com" target="_blank">Jiawei Tyler Gu</a></strong>
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on Apr. 8, 2025.
+            <br>
+            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://jw-liu.xyz" target="_blank">Jiawei Liu</a></strong>
 	    <br>
 	    Software Quality Assurance for Machine Learning Systems
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Jan 15, 2024. 
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Jan. 15, 2024. 
             <br>
             Advisor: <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a>
           </span>
