--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -104,6 +104,8 @@ td.papers {
             <span style="font-size: 12pt;">
 	    <strong><a href="https://tylergu.com" target="_blank">Jiawei Tyler Gu</a></strong>
 	    <br>
+	    Reliable Cloud System Management: Challenges and Tools
+	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on Apr. 8, 2025.
             <br>
             Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
