--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE224"># Doctors</p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber &rarr; Meta</p>
 				  <p class="STYLE224"># Maesters</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Manvik Nanda</a>, MCS 2024</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Manvik Nanda</a>, MCS 2024 &rarr; University of Utah (PhD)</p>
 				  <p class="STYLE223"><a href="https://anna-mazhar.github.io" target="_blank">Anna Mazhar</a>, MS 2024 (<a href="thesis/MAZHAR-THESIS-2024.pdf" target="_blank">thesis</a>) &rarr; Cornell University (PhD)</p> 
 				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, MS 2024 (<a href="thesis/LIAN-THESIS-2024.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; UIUC (PhD)</p>
 				  <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu" target="_blank">Pratik Rajesh Sampat</a>, MS 2024 (thesis), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a> &rarr; AMD Research</p>
@@ -638,7 +638,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="thesis/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
 				  <p class="STYLE224"># Bachelors</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/mark-zhang-zzx" target="_blank">Zhixing (Mark) Zhang</a>, BS, Spring 2024 &rarr; <a href="https://pathlit.com" target="_blank">Pathlit</a> (CTO)</p>
-				  <p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a> (USTC), UIUC+ SUR in SE, Fall 2024</p>
+				  <p class="STYLE223"><a href="https://odeinjul.github.io" target="_blank">Shurang Wu</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; University of Texas at Austin (PhD)</p>
 				  <p class="STYLE223"><a href="https://songlkkevin.github.io" target="_blank">Linkai Song</a> (USTC), UIUC+ SUR in SE, Fall 2024 &rarr; HKUST (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Tingxu Ren</a> (Zhejiang University), UIUC+ SUR in SE, Summer 2024 &rarr; Tsinghua University (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
