--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://codyrivera.com" target="_blank">Cody Rivera</a>, PhD Student (Fall 2024 - now)</p>
 								<p class="STYLE223"><a href="https://alan-s-andrade.github.io" target="_blank">Alan Andrade</a>, MCS Student (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, Undergraduate Student (UIUC) (Spring 2024 - now) &rarr; University of Texas at Austin (PhD)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiaqi Pan</a>, Undergraduate Student (Tsinghua) (Spring 2025 - now)</p>
 				<!--
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Xuecheng Liu</a>, Undergraduate Student (ZJU-UIUC) (Summer 2024 - now)</p>
