--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS) &rarr; TikTok</p>    
 			      	  <p class="STYLE224"># Scholars</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar, 2023--2024 &rarr; University of California Berkeley (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Tsinghua), 2023--2024 &harr; Tsinghua University</p>
+				  <p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Tsinghua), 2023--2024 &harr; Tsinghua University &rarr; Infinigence AI</p>
 				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research Scholar, 2021--2022 &rarr; UIUC (MS) &rarr; TigerBeetle</p> 
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), Visiting PhD Student (NUDT), 2019--2020 &rarr; Assistant Professor at NUDT</p>
 				</TD>
