--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, BE, 2023 &rarr; UIUC (MS) </p>
 				  <p class="STYLE223"><a href="https://essoz.github.io" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
-				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
+				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS) &rarr; Snowflake</p>
 				  <p class="STYLE223"><a href="https://taham0.github.io" target="_blank">Muhammad Taha</a> (LUMS), UIUC+ SUR in SE, 2022 &rarr; Purdue University (MS)</p>
 	              		  <p class="STYLE223"><a href="https://whentojump.xyz">Wentao Zhang</a> (SJTU), UIUC+ SUR in SE, 2022 &rarr; UIUC (PhD)</p>
 				  <p class="STYLE223"><a href="https://xinyulian.tech" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS) &rarr; UIUC (PhD)</p>
