--- a/pub.html
+++ b/pub.html
@@ -190,6 +190,36 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">arXiv</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>ITBench: Evaluating AI Agents across Diverse Real-World IT Automation Tasks</strong> [<a href="https://arxiv.org/pdf/2502.05352" target="_blank">pdf</a> | <a href="pub/itb_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Saurabh Jha, Rohan Arora, Yuji Watanabe, Takumi Yanagawa, Yinfang Chen, Jackson Clark, et al.
+						  <br>
+						  arXiv:2502.05352, Feb. 2025.
+						  <br>
+						  <font color="#C40233">
+						  <b>Open-sourced via IBM (see <a href="https://research.ibm.com/blog/it-agent-benchmark" target="_blank">IBM Blog<a>):</b>
+						  </font>
+						  <br>
+						  <font size="2">
+						  - <a href="https://github.com/IBM/ITBench" target="_blank">https://github.com/IBM/ITBench</a>
+						  <br>
+						  - <a href="https://github.com/IBM/ITBench-Tools" target="_blank">https://github.com/IBM/ITBench-Tools</a>
+						  <br>
+						  - <a href="https://github.com/IBM/ITBench-SRE-Agent" target="_blank">https://github.com/IBM/ITBench-SRE-Agent</a>
+						  <br>
+						  - <a href="https://github.com/IBM/ITBench-CISO-CAA-Agent" target="_blank">https://github.com/IBM/ITBench-CISO-CAA-Agent</a>
+						  </font>
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">SOSP'24</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
