--- a/pub.html
+++ b/pub.html
@@ -202,7 +202,7 @@ td.papers {
 						  arXiv:2502.05352, Feb. 2025.
 						  <br>
 						  <font color="#C40233">
-						  <b>Open-sourced via IBM (see <a href="https://research.ibm.com/blog/it-agent-benchmark" target="_blank">IBM Blog<a>):</b>
+						  <b>Open-sourced by IBM (see <a href="https://research.ibm.com/blog/it-agent-benchmark" target="_blank">IBM Blog<a>):</b>
 						  </font>
 						  <br>
 						  <font size="2">
