--- a/pub.html
+++ b/pub.html
@@ -62,6 +62,22 @@ td.papers {
   <tbody>
 
 	<tr>
+		<td class="date"><font color="#083b89">OSDI'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>EMT: An OS Framework for New Memory Translation Architectures</strong> [<a href="pub/emt.pdf" target="_blank">pdf</a> | <a href="pub/emt_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Siyuan Chai, Jiyuan Zhang, Jongyul Kim, Alan Wang, Fan Chung, Jovan Stojkovic, Weiwei Jia, Dimitrios Skarlatos, Josep Torrellas, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 19th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'25</b></font>), Boston, MA, Jul. 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">EuroSys'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
