--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -102,6 +102,22 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+	    <strong><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a></strong>
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on Apr. 22, 2025. 
+            <br>
+            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
 	    <strong><a href="https://tylergu.com" target="_blank">Jiawei Tyler Gu</a></strong>
 	    <br>
 	    Reliable Cloud System Management: Challenges and Tools
