--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -265,9 +265,9 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://tzubinyan.tw/" target="_blank">Tzu-Bin Yan</a></strong>
 	    <br>
-	    Evaluating and Extending the PacketLab Design
+	    An Internet Measurement Framework for Low-Cost Vantage Point Sharing
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Dec. 8, 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Mar. 25, 2025.
             <br>
             Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
           </span>
