--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -267,7 +267,7 @@ td.papers {
 	    <br>
 	    An Internet Measurement Framework for Low-Cost Vantage Point Sharing
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Mar. 25, 2025.
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, University of Illinois Urbana-Champaign, defended on Mar. 25, 2025.
             <br>
             Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
           </span>
