--- a/pub.html
+++ b/pub.html
@@ -78,6 +78,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">HotOS'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Multiplexing file systems to reap the benefits of storage innovations without friction</strong> [<a href="pub/fmux.pdf" target="_blank">pdf</a> | <a href="pub/fmux_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jiyuan Zhang, Jongyul Kim, Chloe Alverti, Peizhe Liu, Weiwei Jia, and Tianyin Xu
+						  <br>
+						  In Proceedings of the ACM SIGOPS 20th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XX</b></font>), Banff, Alberta, Canada, May, 2025.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">EuroSys'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
