--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -247,16 +247,16 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://sampalomad.github.io" target="_blank">Runxiang (Sam) Cheng</a></strong>
 	    <br>
-	    Test-Case Prioritization for Modern Software
+	    Regression Test Prioritization for Modern Software
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on April 3, 2024.
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Apr. 1, 2025.
             <br>
             Advisor: <a href="https://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
           </span>
         </div>
       </td>
   </tr>
-
+	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
