--- a/pub.html
+++ b/pub.html
@@ -136,6 +136,8 @@ td.papers {
 						  Chloe Alverti, Stratos Psomadakis, Burak Ocalan, Shashwat Jaiswal, Tianyin Xu, and Josep Torrellas
 						  <br>
 						  In Proceedings of the 30th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'25</b></font>), Rotterdam, The Netherlands, Apr. 2025.
+						  <br>
+						  <font color="#C40233"><b>Best Paper Award</b></font>
 					  	</span>
 				  </div>
 		</td>
