--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -154,25 +154,6 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-	    <strong><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a></strong>
-	    <br>
-	    Rethinking Operating System Kernel Extensions: New Use Cases and Programming Framework
-	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on Dec. 18, 2024. 
-            <br>
-            Advisors: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
-		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>
-          </span>
-        </div>
-      </td>
-  </tr>
-	  
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
 	    <strong><a href="https://jovans2.github.io" target="_blank">Jovan Stojkovic</a></strong>
 	    <br>
 	    Chasing the Tail at Scale: Towards Cloud-Native Processor Architectures
@@ -234,6 +215,25 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 3, 2024.
             <br>
             Advisor: <a href="https://csl.illinois.edu/directory/faculty/nskim" target="_blank">Nam Sung Kim</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+	    <strong><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a></strong>
+	    <br>
+	    Rethinking Operating System Kernel Extension Design and Implementation
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Apr. 4, 2025. 
+            <br>
+            Advisors: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+		    and <a href="https://people.cs.vt.edu/djwillia" target="_blank">Dan Williams</a>
           </span>
         </div>
       </td>
