--- a/index.html
+++ b/index.html
@@ -592,8 +592,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD Candidate (Fall 2019 - now), 
 									awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>,
 									<a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
-								</p>
-								<p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD Candidate (Fall 2020 - now), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>							
+								</p>							
 								<p class="STYLE223"><a href="https://schai.me" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
 				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now)</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), 
@@ -622,6 +621,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE224"># Doctors</p>
+				  <p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD Candidate (Fall 2020 - now), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a> &rarr; Meta </p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber &rarr; Meta</p>
 				  <p class="STYLE224"># Maesters</p>
 				  <p class="STYLE223"><a href="https://tz-zzz.github.io" target="_blank">Zhen Tang</a>, MCS 2024 &rarr; University of Texas at Austin (PhD)</p>
