--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://sched.co/1zfpE" target="_blank">Open Source Summit</a></p>
 				<p class="STYLE223">Software Reliability in Emerging Cloud Computing Paradigms at 
 					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a> and 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a></p>
