--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>,
 									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+								<p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, PhD Student (Fall 2022 - now)</p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://codyrivera.com" target="_blank">Cody Rivera</a>, Visiting PhD Student (Fall 2024 - now) &rarr; University of Wisconsin-Madison (PhD)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Leshna Balara</a>, MS Student (UW–Madison) (Spring 2025 - now)</p>
