--- a/index.html
+++ b/index.html
@@ -594,7 +594,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>,
 									<a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
 								</p>
-								<p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD Candidate (Fall 2020 - now), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
 								<p class="STYLE223"><a href="https://schai.me" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
 				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now)</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), 
@@ -602,7 +601,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://jiyuan.is" target="_blank">Jiyuan Zhang</a>, PhD Student (Fall 2022 - now),
-									awarded <a href="https://siebelschool.illinois.edu/about/awards/graduate-fellowships-awards/wing-kai-cheng-fellowship" target="_blank"><font color="#E84A27">Wing Kai Cheng Fellowship</font></a>,
+									awarded <a href="https://siebelschool.illinois.edu/about/awards/graduate-fellowships-awards/wing-kai-cheng-fellowship" target="_blank"><font color="#E84A27">Wing Kai Cheng Fellowship</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://wentao.systems" target="_blank">Wentao Zhang</a>, PhD Student (Fall 2023 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 								<p class="STYLE223"><a href="https://codyrivera.com" target="_blank">Cody Rivera</a>, Visiting PhD Student (Fall 2024 - now) &rarr; University of Wisconsin-Madison (PhD)</p>
@@ -625,6 +624,10 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE224"># Doctors</p>
+			          <p class="STYLE223"><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a>, PhD 2025, co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, 
+				  	awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, 
+					<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font> &rarr; Meta </a>
+				  </p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber &rarr; Meta</p>
 				  <p class="STYLE224"># Maesters</p>
 				  <p class="STYLE223"><a href="https://tz-zzz.github.io" target="_blank">Zhen Tang</a>, MCS 2024 &rarr; University of Texas at Austin (PhD)</p>
