--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -228,7 +228,7 @@ td.papers {
             <span style="font-size: 12pt;">
 	    <strong><a href="https://jinghao-jia.github.io" target="_blank">Jinghao Jia</a></strong>
 	    <br>
-	    Rethinking Operating System Kernel Extension Design and Implementation
+	    Making Safe OS Kernel Extensions Expressive, Efficient, and Easy to Program
 	    <br>
             Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, defended on Apr. 4, 2025. 
             <br>
