--- a/index.html
+++ b/index.html
@@ -513,7 +513,11 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		      <a href="https://escholarship.org/uc/jsys/about" target="_blank">Journal of Systems Research</a>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>)
 	          </p>
-	          <p class="STYLE223">2025
+	          <p class="STYLE223">2026
+		    <a href="https://2026.eurosys.org" target="_blank">EuroSys</a>,
+		    <a href="https://www.usenix.org/conference/nsdi26" target="_blank">NSDI</a>,
+	          </p>
+		  <p class="STYLE223">2025
 		    <a href="https://sigops.org/s/conferences/sosp/2025" target="_blank">SOSP</a>,
 		    <a href="https://www.usenix.org/conference/osdi25" target="_blank">OSDI</a>,
 		    <a href="https://2025.eurosys.org" target="_blank">EuroSys</a>,
