--- a/pub.html
+++ b/pub.html
@@ -78,6 +78,24 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">ATC'25</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Rex: Closing the language-verifier gap with safe and usable kernel extensions</strong> [<a href="pub/rex.pdf" target="_blank">pdf</a> | <a href="pub/rex_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jinghao Jia, Ruowen Qin, Milo Craun, Egor Lukiyanov, Ayush Bansal, Michael V. Le, Hubertus Franke, Hani Jamjoom, Tianyin Xu, and Dan Williams
+						  <br>
+						  In Proceedings of the 2025 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'25</b></font>), Boston, MA, Jul. 2025.
+						  <br>
+						  Project: <a href="https://github.com/rex-rs" target="_blank">https://github.com/rex-rs</a>
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">HotOS'25</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
