--- a/pub.html
+++ b/pub.html
@@ -89,7 +89,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2025 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'25</b></font>), Boston, MA, Jul. 2025.
 						  <br>
-						  Project: <a href="https://github.com/rex-rs" target="_blank">https://github.com/rex-rs</a>
+						  Project: <a href="https://github.com/rex-rs/rex" target="_blank">https://github.com/rex-rs/rex</a>
 					  	</span>
 				  </div>
 		</td>
