--- a/pub.html
+++ b/pub.html
@@ -180,6 +180,8 @@ td.papers {
 						  Anna Mazhar, Saad Sher Alam, William X. Zheng, Yinfang Chen, Suman Nath, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 47th International Conference on Software Engineering (<font color="#083b89"><b>ICSE'25</b></font>), Ottawa, Ontario, Canada, Apr. 2025.
+						  <br>
+						  Artifact: <a href="https://github.com/xlab-uiuc/cloudtest" target="_blank">https://github.com/xlab-uiuc/cloudtest</a>
 					  	</span>
 				  </div>
 		</td>
@@ -196,6 +198,8 @@ td.papers {
 						  Xinyu Lian, Yinfang Chen, Runxiang Cheng, Jie Huang, Parth Thakkar, Minjia Zhang, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 47th International Conference on Software Engineering (<font color="#083b89"><b>ICSE'25</b></font>), Ottawa, Ontario, Canada, Apr. 2025.
+						  <br>
+						  Artifact: <a href="https://github.com/xlab-uiuc/ciri" target="_blank">https://github.com/xlab-uiuc/ciri</a>
 					  	</span>
 				  </div>
 		</td>
