--- a/index.html
+++ b/index.html
@@ -599,7 +599,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									<a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
 								</p>
 								<p class="STYLE223"><a href="https://schai.me" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
-				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now)</p>
+				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now),
+									awarded <a href="https://mavis.grainger.illinois.edu/" target="_blank"><font color="#E84A27">Mavis Future Faculty Fellow</font></a>
+								</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), 
 									awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>,
 									<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
