--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,9 +86,11 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-	    <strong><a href="https://schai.me" target="_blank">Siyuan Chai</a></strong>
+	    <strong><a href="https://tylergu.com" target="_blank">Jiawei Tyler Gu</a></strong>
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on May 2, 2025. 
+	    Reliable Cloud System Management: Challenges and Tools
+	    <br>
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on Apr. 8, 2025.
             <br>
             Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
           </span>
@@ -102,11 +104,11 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-	    <strong><a href="https://tylergu.com" target="_blank">Jiawei Tyler Gu</a></strong>
+	    <strong><a href="https://schai.me" target="_blank">Siyuan Chai</a></strong>
 	    <br>
-	    Reliable Cloud System Management: Challenges and Tools
+	    Building an OS Framework for New Memory Translation Architectures
 	    <br>
-            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, prelim scheduled on Apr. 8, 2025.
+            Siebel School of Computing and Data Science, University of Illinois Urbana-Champaign, passed prelim on May 2, 2025. 
             <br>
             Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
           </span>
