--- a/travel.html
+++ b/travel.html
@@ -147,6 +147,7 @@ div.Section1
 						<li><font color="#083b89"><b>Canada</b></font>:
                                                   <ul style="list-style-type:circle">
 					            <li>Huntsville (2019)</li>
+						    <li>Ottawa (2025)</li>
 					            <li>Toronto (2020)</li>
                                                     <li>Waterloo (2017)</li>
                                                   </ul>
