--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TD class=content width="96%">
 				<p class="STYLE223">Jinghao will present <a href="https://github.com/rex-rs/rex/" target="_blank">Rex</a> at <a href="https://sched.co/1zfpE" target="_blank">Open Source Summit</a></p>
 				<p class="STYLE223">Software Reliability in Emerging Cloud Computing Paradigms at 
-					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a> 
+					<a href="https://sky.cs.berkeley.edu/events/sky-seminar-tianyin-xu-uiuc-software-reliability-in-emerging-cloud-computing-paradigms" target="_blank">Sky Seminar</a>, 
 					<a href="https://www.pdl.cmu.edu/SDI/2024/112124.html" target="_blank">CMU SDI Seminar</a>, and
 					UIUC SysNet Retreat.</p>
 				<p class="STYLE223"><a href="poster/Rex-IIDAI.pdf" target="_blank">Rex</a> and <a href="poster/Acto-IIDAI.pdf" target="_blank">Acto</a> are invited for presentation at IBM Research Day</p>
