--- a/pub.html
+++ b/pub.html
@@ -105,7 +105,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						  <strong>Rethinking Tiered Storage:​ Talk to File Systems, Not Device Drivers</strong> [<a href="pub/fmux.pdf" target="_blank">pdf</a> | <a href="pub/fmux_bib.txt" target="_blank">bib</a>]
+						  <strong>Rethinking Tiered Storage:​ Talk to File Systems, Not Device Drivers</strong> [<a href="pub/mux.pdf" target="_blank">pdf</a> | <a href="pub/mux_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Jiyuan Zhang, Jongyul Kim, Chloe Alverti, Peizhe Liu, Weiwei Jia, and Tianyin Xu
 						  <br>
