--- a/travel.html
+++ b/travel.html
@@ -187,7 +187,7 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>Czech Republic</b></font>:
                                                   <ul style="list-style-type:circle">
-						     <li>Prague (2009) </li>
+						     <li>Prague (2009, 2025) </li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>Denmark</b></font>:
