--- a/pub.html
+++ b/pub.html
@@ -72,6 +72,9 @@ td.papers {
 						  Siyuan Chai, Jiyuan Zhang, Jongyul Kim, Alan Wang, Fan Chung, Jovan Stojkovic, Weiwei Jia, Dimitrios Skarlatos, Josep Torrellas, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 19th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'25</b></font>), Boston, MA, Jul. 2025.
+						  <br>
+						  Artifact: <a href="https://github.com/xlab-uiuc/emt" target="_blank">https://github.com/xlab-uiuc/emt</a>
+						  
 					  	</span>
 				  </div>
 		</td>
